--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,15 @@
   <body>
 
     <header class="site-header">
-      <nav class="site-nav">
+   
         <ul>
-          <li><a href="https://ordinaryengineering.com/" target="_blank" rel="noopener noreferrer">Ordinary Engineering</a></li>
+          <li><a href="{{ '/' | relative_url }}">Home</a></li>
+          <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
+          <li><a href="{{ '/about/' | relative_url }}">About</a></li>
+          <!-- External link -->
+          <li><a href="https://ordinaryengineering.com/" target="_blank" rel="noopener noreferrer">External Site</a></li>
         </ul>
-      </nav>
+    
     </header>
 
     <main class="page-content" aria-label="Content">
