--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     <header class="site-header">
-   
+   <nav>  
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home</a></li>
           <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
@@ -14,7 +14,7 @@
           <!-- External link -->
           <li><a href="https://ordinaryengineering.com/" target="_blank" rel="noopener noreferrer">External Site</a></li>
         </ul>
-    
+    </nav>
     </header>
 
     <main class="page-content" aria-label="Content">
