--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,14 @@
+
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
-
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
   {%- include head.html -%}
-
   <body>
-
-    <header class="site-header">
-   <nav>  
-        <ul>
-          <li><a href="{{ '/' | relative_url }}">Home</a></li>
-          <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
-          <li><a href="{{ '/about/' | relative_url }}">About</a></li>
-          <!-- External link -->
-          <li><a href="https://ordinaryengineering.com/" target="_blank" rel="noopener noreferrer">External Site</a></li>
-        </ul>
-    </nav>
-    </header>
-
+    {%- include header.html -%}
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
     </main>
-
     {%- include footer.html -%}
-
   </body>
-
 </html>
